Update connect to your server.mdx

--- a/src/content/docs/games/Palworld/connect to your server.mdx
+++ b/src/content/docs/games/Palworld/connect to your server.mdx
@@ -1,16 +1,16 @@
 ---
 title: How To Connect To Your Palworld Server
-description: Learn how to join your Palworld dedicated server using the IP address.
+description: Learn how to join your Palworld Dedicated Server using the IP address.
 sidebar:
   label: Connect to Your Server
 ---
 
-Here is how you can join your Palworld dedicated server using the IP address.
+Here is how you can join your Palworld Dedicated Server using the IP address.
 
 ## How to Connect to Your PC Palworld Server 
 
 1. Access the [Game Host Bros Panel](https://panel.gamehostbros.com/).
-2. Click on your Palworld server.
+2. Click on your Palworld Server.
 3. Copy the [server IP address](https://www.youtube.com/watch?v=Ap7DtDF-wYg) from the sidebar.
 4. Open Palworld and click `Join Multiplayer Game`
 5. At the bottom of the screen you will see `127.0.0.1:8211`, replace this with your IP address and click `Connect`
@@ -20,10 +20,10 @@ Here is how you can join your Palworld dedicated server using the IP address.
 1. Name your Server in the Panel by following [This Guide](https://guides.gamehostbros.com/games/palworld/change-server-name/)
 2. Select "Join Multiplayer Game" in the Palworld menu.
 3. Select "Community Servers"
-4. Search your server name in the box located at the top.
-5. Once found select your server to connect.
+4. Search your Servers name in the box located at the top.
+5. Once found select your Server to connect.
 
 :::tip
-It may take a couple of minutes for your server to show up.
+It may take a couple of minutes for your Server to show up.
 :::
 
